[gd_scene load_steps=51 format=2]

[ext_resource path="res://assets/graphisme/Drapeau.png" type="Texture" id=1]
[ext_resource path="res://assets/graphisme/Base drapeau.png" type="Texture" id=2]
[ext_resource path="res://assets/graphisme/Supernova.png" type="Texture" id=3]
[ext_resource path="res://assets/graphisme/Trou noir tourne 2.png" type="Texture" id=4]
[ext_resource path="res://assets/graphisme/Comete.png" type="Texture" id=5]
[ext_resource path="res://assets/graphisme/Trou noir tourne 1.png" type="Texture" id=6]
[ext_resource path="res://assets/graphisme/Planete bleue.png" type="Texture" id=7]
[ext_resource path="res://assets/graphisme/Planete verte.png" type="Texture" id=8]
[ext_resource path="res://src/game/Blackhole/blackhole.gd" type="Script" id=9]
[ext_resource path="res://src/game/Comete/Comet.gd" type="Script" id=10]
[ext_resource path="res://src/particles/blackhole/blackhole_particles.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/game/spaceship/Spaceship.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/game/Enemy_spaceship/enemy_spaceship.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/game/basic_planet/ring.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/game/basic_planet/PlanetRed.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/game/asteroids/Asteroid.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/game/asteroids/AsteroidsArea.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/game/basic_planet/PlanetYellow.tscn" type="PackedScene" id=18]
[ext_resource path="res://src/levels/level.gd" type="Script" id=19]
[ext_resource path="res://src/game/basic_planet/Planet.gd" type="Script" id=20]
[ext_resource path="res://src/game/Supernova/Supernova.gd" type="Script" id=21]
[ext_resource path="res://src/shaders/blackhole/blackhole_shockwave.shader" type="Shader" id=22]
[ext_resource path="res://src/game/basic_planet/ring.gd" type="Script" id=23]
[ext_resource path="res://src/game/basic_planet/ring_comete.gd" type="Script" id=24]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.659259, 1 )
colors = PoolColorArray( 0.984207, 0.191406, 1, 1, 0.992157, 0.615686, 1, 0.878431, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 100.0
radial_accel_random = 0.01
tangential_accel = 100.0
tangential_accel_random = 0.16
damping = 4.0
scale = 3.0
scale_random = 1.0
color_ramp = SubResource( 2 )

[sub_resource type="CircleShape2D" id=4]
radius = 582.307

[sub_resource type="CircleShape2D" id=5]
radius = 30.4006

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 22 )
shader_param/center = Vector2( 0.5, 0.5 )
shader_param/force = 0.0
shader_param/size = 0.0
shader_param/thickness = -0.238

[sub_resource type="Animation" id=7]
resource_name = "wave"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:material:shader_param/force")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 7.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:material:shader_param/size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.7 ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 331.637

[sub_resource type="CircleShape2D" id=9]
radius = 311.798

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 22 )
shader_param/center = Vector2( 0.5, 0.5 )
shader_param/force = 91.451
shader_param/size = 0.740329
shader_param/thickness = 0.383

[sub_resource type="CircleShape2D" id=11]
radius = 263.634

[sub_resource type="CircleShape2D" id=12]
radius = 30.0

[sub_resource type="Animation" id=13]
length = 9.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.8, 9.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4.8, 9.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -180.0, -360.0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "shockwave"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite2:material:shader_param/size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.2, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="GDScript" id=15]
script/source = "extends Node2D

# Classe servant à avoir 5 astéroïdes dans une scène ( classe pratique )

func _ready():
	pass
"

[sub_resource type="Curve2D" id=16]
_data = {
"points": PoolVector2Array( -32.7579, 64.256, 32.7579, -64.256, 1701.41, -334.531, 34.0179, -62.9961, -34.0179, 62.9961, 1611.23, -333.555, 32.7579, -59.2163, -32.7579, 59.2163, 1581.03, 119.504, -37.7976, 62.9961, 37.7976, -62.9961, 1629.57, 163.842, 0, 0, 0, 0, 1674.4, -301.859, 0, 0, 0, 0, 1701.41, -334.531 )
}

[sub_resource type="Curve2D" id=17]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 180.837, -450.785, 0, 0, 0, 0, 202.451, -473.256, 0, 0, 0, 0, 3572.54, -833.801 )
}

[sub_resource type="Curve" id=18]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0.00574712, 19.6364 ), 0.0, 55.1085, 0, 0, Vector2( 1, 6.54547 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=19]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0.00574712, -3.63635 ), 0.0, 300.545, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=20]
max_value = 100.0
_data = [ Vector2( 0, 0 ), 0.0, 5.57692, 0, 0, Vector2( 1, 102.273 ), 249.513, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=21]
offsets = PoolRealArray( 0, 0.701987, 1 )
colors = PoolColorArray( 0.896973, 0.644833, 0.087595, 1, 0.752441, 0.648974, 0.420309, 1, 0.794922, 0.76216, 0.568245, 1 )

[sub_resource type="Curve" id=22]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 200 ), 274.182, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=23]
offsets = PoolRealArray( 0, 0.333333, 0.437086 )
colors = PoolColorArray( 0.917969, 0.411837, 0.190048, 1, 0.847656, 0.560724, 0.225159, 1, 0.878906, 0.674361, 0.240326, 1 )

[sub_resource type="CircleShape2D" id=24]
radius = 124.49

[sub_resource type="CircleShape2D" id=25]
radius = 41.2091

[sub_resource type="Animation" id=26]
length = 9.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.8, 9.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[node name="lvl4" type="Node2D"]
script = ExtResource( 19 )
nb_etoile = 40

[node name="spawn_position" type="Position2D" parent="."]
position = Vector2( 226.786, 186.468 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.02
autostart = true

[node name="Spaceship" parent="." instance=ExtResource( 12 )]
position = Vector2( 196.623, 324.498 )

[node name="Supernova" type="Node2D" parent="."]
position = Vector2( 1422.31, 707.981 )
script = ExtResource( 21 )
__meta__ = {
"_edit_group_": true
}
RADIUS = 600
FORCE = 80

[node name="Shockwave" type="Node2D" parent="Supernova"]
scale = Vector2( 3, 3 )

[node name="Particles2D" type="Particles2D" parent="Supernova/Shockwave"]
scale = Vector2( 2, 2 )
amount = 70
lifetime = 1.3
speed_scale = 2.0
process_material = SubResource( 3 )

[node name="Sprite2" type="Sprite" parent="Supernova"]
texture = ExtResource( 3 )

[node name="Aura" type="Area2D" parent="Supernova"]

[node name="attraction" type="CollisionShape2D" parent="Supernova/Aura"]
shape = SubResource( 4 )

[node name="Centre" type="Area2D" parent="Supernova"]

[node name="mort" type="CollisionShape2D" parent="Supernova/Centre"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Supernova"]
material = SubResource( 6 )
texture = ExtResource( 3 )

[node name="wave_animation" type="AnimationPlayer" parent="Supernova"]
anims/wave = SubResource( 7 )

[node name="pivot" type="Node2D" parent="Supernova"]
script = ExtResource( 23 )

[node name="Position2D" type="Position2D" parent="Supernova/pivot"]

[node name="SpawnPos" type="Node2D" parent="Supernova/pivot/Position2D"]

[node name="PlanetYellow" parent="." instance=ExtResource( 18 )]
position = Vector2( 371.452, 279.383 )
is_checkpoint = true

[node name="PlanetRed" parent="." instance=ExtResource( 15 )]
position = Vector2( 2139.82, -3.05176e-05 )
is_checkpoint = true

[node name="PlanetYellow2" parent="." instance=ExtResource( 18 )]
position = Vector2( 1111.18, -171.439 )
is_checkpoint = true

[node name="PlanetBlue" type="Node2D" parent="."]
position = Vector2( 2216.01, 1444.53 )
script = ExtResource( 20 )
__meta__ = {
"_edit_group_": true
}
speed = 1.0
lune_speed = 1.0
is_checkpoint = true

[node name="Sprite" type="Sprite" parent="PlanetBlue"]
texture = ExtResource( 7 )

[node name="SpriteDrapeau" type="Sprite" parent="PlanetBlue/Sprite"]
visible = false
position = Vector2( -0.789539, -84.2806 )
texture = ExtResource( 1 )

[node name="SpriteBaseDrapeau" type="Sprite" parent="PlanetBlue/Sprite"]
visible = false
position = Vector2( -0.75, -76.25 )
texture = ExtResource( 2 )

[node name="Gravity" type="Area2D" parent="PlanetBlue"]
collision_layer = 2

[node name="attraction" type="CollisionShape2D" parent="PlanetBlue/Gravity"]
position = Vector2( -0.140308, -2.24493 )
shape = SubResource( 8 )

[node name="Pivot" type="Node2D" parent="PlanetBlue"]
rotation = 1.3631

[node name="OrbitPosition" type="Position2D" parent="PlanetBlue/Pivot"]
position = Vector2( -102.049, 70.778 )

[node name="PivotLune" type="Node2D" parent="PlanetBlue"]

[node name="pivot" parent="PlanetBlue" instance=ExtResource( 14 )]

[node name="PlanetGreen" type="Node2D" parent="."]
position = Vector2( 326.357, 1133.76 )
script = ExtResource( 20 )
speed = 1.0
lune_speed = 1.0
is_checkpoint = true

[node name="Sprite" type="Sprite" parent="PlanetGreen"]
texture = ExtResource( 8 )

[node name="SpriteDrapeau" type="Sprite" parent="PlanetGreen/Sprite"]
visible = false
position = Vector2( -0.0834274, -46.4691 )
texture = ExtResource( 1 )

[node name="SpriteBaseDrapeau" type="Sprite" parent="PlanetGreen/Sprite"]
visible = false
position = Vector2( -0.0834274, -38.4601 )
texture = ExtResource( 2 )

[node name="Gravity" type="Area2D" parent="PlanetGreen"]
collision_layer = 2

[node name="attraction" type="CollisionShape2D" parent="PlanetGreen/Gravity"]
shape = SubResource( 9 )

[node name="Pivot" type="Node2D" parent="PlanetGreen"]
rotation = 1.3631

[node name="OrbitPosition" type="Position2D" parent="PlanetGreen/Pivot"]
position = Vector2( -52.6988, 56.4451 )

[node name="PivotLune" type="Node2D" parent="PlanetGreen"]

[node name="pivot" parent="PlanetGreen" instance=ExtResource( 14 )]

[node name="Trou noir" type="Node2D" parent="."]
position = Vector2( 1138.91, 1733.77 )
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}
RADIUS = 400
FORCE = 30

[node name="Sprite" type="Sprite" parent="Trou noir"]
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="Trou noir"]
material = SubResource( 10 )
position = Vector2( 0, 3 )
texture = ExtResource( 4 )

[node name="Aura" type="Area2D" parent="Trou noir"]

[node name="attraction" type="CollisionShape2D" parent="Trou noir/Aura"]
shape = SubResource( 11 )

[node name="Centre" type="Area2D" parent="Trou noir"]

[node name="mort" type="CollisionShape2D" parent="Trou noir/Centre"]
shape = SubResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Trou noir"]
anims/Rotate = SubResource( 13 )

[node name="ShockwaveAnimationPlayer" type="AnimationPlayer" parent="Trou noir"]
anims/shockwave = SubResource( 14 )

[node name="Blackhole_particles" parent="Trou noir" instance=ExtResource( 11 )]
scale = Vector2( 1.3, 1.3 )

[node name="pivot" type="Node2D" parent="Trou noir"]
script = ExtResource( 23 )

[node name="Position2D" type="Position2D" parent="Trou noir/pivot"]

[node name="SpawnPos" type="Node2D" parent="Trou noir/pivot/Position2D"]

[node name="Asteroids Area" parent="." instance=ExtResource( 17 )]
position = Vector2( 53.9391, 554.374 )

[node name="Asteroids Area3" type="Node2D" parent="Asteroids Area"]
position = Vector2( 704.204, 44.9492 )
script = SubResource( 15 )

[node name="Asteroids" parent="Asteroids Area/Asteroids Area3" instance=ExtResource( 16 )]
position = Vector2( 33.9028, 25.4271 )

[node name="Asteroids10" parent="Asteroids Area/Asteroids Area3" instance=ExtResource( 16 )]
position = Vector2( 159.806, 178.755 )

[node name="Asteroids8" parent="Asteroids Area/Asteroids Area3" instance=ExtResource( 16 )]
position = Vector2( 228.844, 38.1407 )

[node name="Asteroids9" parent="Asteroids Area/Asteroids Area3" instance=ExtResource( 16 )]
position = Vector2( 93.2327, 72.0435 )

[node name="Asteroids3" parent="Asteroids Area/Asteroids Area3" instance=ExtResource( 16 )]
position = Vector2( 169.981, 102.007 )

[node name="Asteroids5" parent="Asteroids Area/Asteroids Area3" instance=ExtResource( 16 )]
position = Vector2( 43.1815, 154.961 )

[node name="Asteroids2" parent="Asteroids Area/Asteroids Area3" instance=ExtResource( 16 )]
position = Vector2( 233.736, 146.834 )

[node name="Asteroids Area2" parent="Asteroids Area" instance=ExtResource( 17 )]
position = Vector2( 344.611, 23.9729 )

[node name="Asteroids Area2" parent="." instance=ExtResource( 17 )]
position = Vector2( 668.245, -95.8917 )
rotation = 0.380482

[node name="Asteroids Area3" parent="Asteroids Area2" instance=ExtResource( 17 )]
position = Vector2( -184.182, -226.483 )
rotation = 2.98023e-08

[node name="Asteroids Area4" parent="Asteroids Area2" instance=ExtResource( 17 )]
position = Vector2( -377.277, -39.5178 )
rotation = 2.98023e-08

[node name="Asteroids Area3" parent="." instance=ExtResource( 17 )]
position = Vector2( 2091.64, 581.343 )

[node name="Asteroids Area5" parent="Asteroids Area3" instance=ExtResource( 17 )]
position = Vector2( 218.753, 215.756 )

[node name="Asteroids Area4" parent="Asteroids Area3" instance=ExtResource( 17 )]
position = Vector2( 134.848, -203.77 )

[node name="vaisseau_ennemy" type="Path2D" parent="."]
position = Vector2( -90.0844, -49.1369 )
curve = SubResource( 16 )

[node name="PathFollow2D" type="PathFollow2D" parent="vaisseau_ennemy"]
position = Vector2( 1701.41, -334.531 )
rotation = -1.12086

[node name="Enemy_vaisseau" parent="vaisseau_ennemy/PathFollow2D" instance=ExtResource( 13 )]
position = Vector2( -0.123535, -0.34061 )

[node name="Comet_path" type="Path2D" parent="."]
position = Vector2( -231.27, 35.5875 )
curve = SubResource( 17 )
__meta__ = {
"_edit_group_": true
}

[node name="PathFollow2D" type="PathFollow2D" parent="Comet_path"]
position = Vector2( 180.837, -450.785 )
rotation = -0.80484

[node name="Comete" type="Node2D" parent="Comet_path/PathFollow2D"]
position = Vector2( 0.944946, -0.629959 )
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}
RADIUS = 250
FORCE = 40
speed = 250

[node name="particules" type="CPUParticles2D" parent="Comet_path/PathFollow2D/Comete"]
amount = 150
lifetime = 2.25
speed_scale = 1.25
randomness = 1.0
emission_shape = 1
emission_sphere_radius = 22.0
gravity = Vector2( -98, 0 )
angular_velocity_curve = SubResource( 18 )
linear_accel_curve = SubResource( 19 )
radial_accel = 10.0
damping = 5.0
damping_curve = SubResource( 20 )
scale_amount = 1.5
color_ramp = SubResource( 21 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Comet_path/PathFollow2D/Comete"]
scale = Vector2( 2, 2 )
amount = 20
emission_shape = 1
emission_sphere_radius = 60.0
gravity = Vector2( 0, 0 )
linear_accel_curve = SubResource( 22 )
radial_accel = -50.0
damping = 20.0
scale_amount = 2.0
scale_amount_random = 0.4
color_ramp = SubResource( 23 )

[node name="Sprite" type="Sprite" parent="Comet_path/PathFollow2D/Comete"]
position = Vector2( 0.373213, 0.943871 )
texture = ExtResource( 5 )

[node name="Aura" type="Area2D" parent="Comet_path/PathFollow2D/Comete"]

[node name="attraction" type="CollisionShape2D" parent="Comet_path/PathFollow2D/Comete/Aura"]
shape = SubResource( 24 )

[node name="Centre" type="Area2D" parent="Comet_path/PathFollow2D/Comete"]

[node name="mort" type="CollisionShape2D" parent="Comet_path/PathFollow2D/Comete/Centre"]
shape = SubResource( 25 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Comet_path/PathFollow2D/Comete"]
anims/Rotate = SubResource( 26 )

[node name="particles" type="Node2D" parent="Comet_path/PathFollow2D/Comete"]

[node name="pivot" type="Node2D" parent="Comet_path/PathFollow2D/Comete"]
script = ExtResource( 24 )

[node name="Position2D" type="Position2D" parent="Comet_path/PathFollow2D/Comete/pivot"]

[node name="SpawnPos" type="Node2D" parent="Comet_path/PathFollow2D/Comete/pivot/Position2D"]

[node name="LevelLimits" type="Node2D" parent="."]

[node name="Position2DTop" type="Position2D" parent="LevelLimits"]
position = Vector2( 1558.64, -832.62 )

[node name="Position2DRight" type="Position2D" parent="LevelLimits"]
position = Vector2( 2786.32, 792.854 )

[node name="Position2DBottom" type="Position2D" parent="LevelLimits"]
position = Vector2( 1261.02, 2189.79 )

[node name="Position2DLeft" type="Position2D" parent="LevelLimits"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Supernova/Aura" to="Supernova" method="_on_Aura_body_entered"]
[connection signal="body_exited" from="Supernova/Aura" to="Supernova" method="_on_Aura_body_exited"]
[connection signal="body_entered" from="Supernova/Centre" to="Supernova" method="_on_Centre_body_entered"]
[connection signal="area_entered" from="PlanetBlue/Gravity" to="PlanetBlue" method="_on_Gravity_area_entered"]
[connection signal="area_entered" from="PlanetGreen/Gravity" to="PlanetGreen" method="_on_Gravity_area_entered"]
[connection signal="body_entered" from="Trou noir/Aura" to="Trou noir" method="_on_Aura_body_entered"]
[connection signal="body_exited" from="Trou noir/Aura" to="Trou noir" method="_on_Aura_body_exited"]
[connection signal="body_entered" from="Trou noir/Centre" to="Trou noir" method="_on_Centre_body_entered"]
[connection signal="body_entered" from="Comet_path/PathFollow2D/Comete/Aura" to="Comet_path/PathFollow2D/Comete" method="_on_Aura_body_entered"]
[connection signal="body_exited" from="Comet_path/PathFollow2D/Comete/Aura" to="Comet_path/PathFollow2D/Comete" method="_on_Aura_body_exited"]
[connection signal="body_entered" from="Comet_path/PathFollow2D/Comete/Centre" to="Comet_path/PathFollow2D/Comete" method="_on_Centre_body_entered"]
